2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_string_value_changed),
	(peditor_color_value_changed): add safeguards for NULL values (closes
	bug #441036)

2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_string_value_changed): compare the
	string from the widget against the converted gconf value, not the
	unmodified one

2007-06-26  Michael Terry  <mike@mterry.name>

	* capplet-util.c, Makefile.am: Drastically simplify capplet_set_icon()
	to only look in the icon theme. Part of bug #450777.

2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.[ch]:
	Generate all types of thumbnails in a seperate process, not just those for
	metathemes.

2007-06-22  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (create_image):
	Make metatheme thumbnails original-sized and add check box + radio button.

2007-06-20  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_icon_info_find,
	gnome_theme_is_writable):
	* gnome-theme-info.h: fix function signatures

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove obsolete files

2007-06-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_icon_info_free): plug leak
	* theme-thumbnail.c: (message_from_child): fix comment

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
	Stop the GdkDisplay mess and let gnome-appearance-properties handle
	gtk+ theme changes manually instead.

2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):
	make it possible to skip engine information if we're not interested
	and fix a warning

2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): add some more checks so
	we don't try to strcmp NULL strings (fixes bug #445908)

2007-06-09  Denis Washington  <denisw@svn.gnome.org>
